manual/config/ingress-controller-service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: nginx-ingress-controller
  name: nginx-ingress-controller
  #namespace: ingress-nginx
  namespace: hello
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    k8s-app: nginx-ingress-controller
  type: LoadBalancer
