manual/config/hello-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
  namespace: hello
spec:
  tls:
  - secretName: tls-kubernetes
  rules:
  - http:
      paths:
      - path: /hello-service
        backend:
          serviceName: hello-service
          servicePort: 80
      - path: /hello-client
        backend:
          serviceName: hello-client
          servicePort: 80
